# tic_tac_toe_rust

./: Cargo.toml  README.md  stevek.md  stevek.rs  test.sh
benches/: ai_bench.rs
src/: board.rs  lib.rs  line.rs  main.rs
src/core/: board.rs  line.rs  marker.rs  mod.rs  slot.rs
src/game/: game.rs  game_mode.rs  game_runner.rs  mod.rs
src/io/: cli.rs  cli_spy.rs  display.rs  mod.rs
src/players/: ai.rs  game_mode.rs  human.rs  mod.rs  scripted_player.rs
tests/: ai_spec.rs  board_spec.rs  cli_spy_spec.rs  display_spec.rs  game_mode_spec.rs  game_spec.rs  human_spec.rs  line_spec.rs  marker_spec.rs  tests.rs
tests/core/: board_spec.rs  line_spec.rs  marker_spec.rs  mod.rs  slot_spec.rs
tests/game/: game_mode_spec.rs  game_spec.rs  mod.rs
tests/io/: cli_spy_spec.rs  display_spec.rs  mod.rs
tests/players/: ai_spec.rs  game_mode_spec.rs  human_spec.rs  mod.rs
